# proarbitrage

./: .gitignore  Cargo.toml  GEMINI.md  README.md  Step1.md  TODO.md  TODO_step2.md  TODO_step3.md  TODO_step4.md  package-lock.json  package.json  requirements.txt  strategy_framework.tex  theory_and_math.md  train_xgboost.py
.antigravitycli/: 9d8caee6-67be-4e83-81ac-231e2f07cf69.json
data/: 510300_extracted.parquet  510300_extracted_subset.csv  510500_extracted_subset.parquet  backtest_equity.parquet  convert_csv_to_parquet.py  fix_parquet.md  fix_parquet.py
scratch/: test_write.py
src/: activation.rs  calibration.rs  ingestion.rs  lib.rs  model.rs  portfolio.rs
src-myoldproject/: lib.rs  main.rs
