[package]
name = "proarbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.38.0", features = ["parquet", "lazy"] }
ndarray = "0.15.6"
good_lp = { version = "1.8.1", default-features = false, features = ["minilp"] }
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
half = "=2.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
